--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="tab_text_1">HOME</string>
+    <string name="tab_text_2">PINS</string>
+    <string name="tab_text_3">YTPINS</string>
+    <string name="tab_text_4">PODPINS</string>
 </resources>
