SQLite, creación básica de pin y usuario

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,12 @@
     <string name="title_activity_login">Login</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
+    <string name="prompt_url">Url: </string>
+    <string name="prompt_fav">Favorito</string>
     <string name="action_sign_in">Login / Registro</string>
+    <string name="action_create_pin">Crear Pin</string>
+    <string name="action_update_pin">Actualizar Pin</string>
+    <string name="action_delete_pin">Eliminar Pin</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
