--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="radio_text_1">Pin</string>
     <string name="radio_text_2">YouTube</string>
     <string name="radio_text_3">PodCast</string>
+    <string name="zero">0:00</string>
 </resources>
